--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,9 +1,9 @@
-title:  "Millennial"
-tagline: "a Jekyll theme"
+title:  "Dianne Blogs"
+tagline: "Welcome To My Life"
 description:
 author:
-  name: "Paul Le"
-  twitter: paululele
+  name: "Dianne"
+  twitter: dianneblogs
 
 # Change to true for Disqus comments
 disqus:
@@ -11,18 +11,15 @@ disqus:
   disqus_shortname: 'millennial-3'
 
 menu:
-- {name: 'Interesting Facts', file: 'facts.html'}
-- {name: 'Learning Resources', file: 'resources.html'}
-- {name: 'Sample Posts', file: 'sample-posts.html'}
-- {name: 'Documentation', file: 'documentation.html'}
 - {name: 'About', file: 'about.html'}
+- {name: 'Faith', file: 'faith.html'}
+- {name: 'College', file: 'college.html'}
+- {name: 'All Things Life', file: 'lifestyle.html'}
+- {name: 'Travel', file: 'travel.html'}
 - {name: 'Contact', file: 'contact.html'}
 
 social:
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'linkedin', link: 'https://linkedin.com/in/lenpaul'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'twitter', link: 'https://twitter.com/dianneblogs'}
+- {icon: 'instagram', link: 'https://instagram.com/dianneblogs'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
