--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,4 +1,4 @@
-title:  "Dianne Blogs"
+title:  "Home"
 tagline: "Welcome To My Life"
 description:
 author:
@@ -11,7 +11,7 @@ disqus:
   disqus_shortname: 'dianneblogs'
 
 menu:
-- {name: 'Home', file: 'home.html'}
+- {name: 'Blog',  file: 'blog.html'}
 - {name: 'Faith', file: 'faith.html'}
 - {name: 'College', file: 'college.html'}
 - {name: 'All Things Life', file: 'lifestyle.html'}
