--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -25,5 +25,6 @@ menu:
 social:
 - {icon: 'twitter', link: 'https://twitter.com/dianneblogs'}
 - {icon: 'instagram', link: 'https://instagram.com/dianneblogs'}
+- {icon: 'pinterest', link: 'https://www.pinterest.com/dianneblogs/pins/'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
